tests/parser/syntax-errors/unknown-type/unknown_type_var_def_in_func.choc
# RUN: choco-opt "%s" | filecheck "%s" --strict-whitespace

def foo():
    a : random = 0

# CHECK:      SyntaxError (line 4, column 9): Unknown type.
# CHECK-NEXT: >>>    a : random = 0
# CHECK-NEXT: >>>--------^
